# AMpardiso

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
tests/: test_version.py
