[metadata]
name = ampardiso
version = 0.0.1
description = 'Python wrapper for Pardiso Solver routines from https://pardiso-project.org'
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD Licenses
    Programming Language :: Python 3
author = Christian Meyer
author_email = christian.meyer@tum.de


[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

